--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -15,10 +15,15 @@
     height: 240px;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow: auto;
   }
 
   button {
     margin-top: auto;
+  }
+
+  .empty-message {
+    font-size: 18px;
+    margin: 18px auto;
   }
 }
